--- a/flutter_sound/example/android/app/src/main/AndroidManifest.xml
+++ b/flutter_sound/example/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application >
         <activity
             android:name=".MainActivity"
-            android:label="My App Name"
+            android:label="Sound"
             android:icon="@mipmap/ic_launcher"
             android:exported="true">
             android:launchMode="singleTop"
