--- a/flutter_sound/pubspec.yaml
+++ b/flutter_sound/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_sound
 version: 9.17.8
-description: 'Europe Stand With Ukraine. Pray for Ukraine. A complete api for audio playback and recording. Audio player, audio recorder.'
+description: "Europe Stand With Ukraine. Pray for Ukraine. A complete api for audio playback and recording. Audio player, audio recorder."
 #author: canardoux<larpoux@gmail.com>
 homepage: https://flutter-sound.canardoux.xyz/readme.html
 repository: https://github.com/canardoux/flutter_sound
@@ -19,14 +19,12 @@ dependencies:
   logger: ^2.0.2
   flutter:
     sdk: flutter
-# ============================================================================
+  # ============================================================================
   flutter_sound_platform_interface: 9.17.8
-#    path: ../flutter_sound_platform_interface # Flutter Sound Dir
+  #    path: ../flutter_sound_platform_interface # Flutter Sound Dir
   flutter_sound_web: 9.17.8
 #    path: ../flutter_sound_web # Flutter Sound Dir
 # ============================================================================
-
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https:/www/flutter-sound.canardoux.xyz/doc.dartlang.org/tools/pub/pubspec
@@ -43,7 +41,6 @@ flutter:
       web:
         default_package: flauto_web
         ####fileName: flutter_sound_web.dart
-
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
